========================================================================
Amazon CloudWatch Agent Operator v2.2.1 (2025-04-21)
========================================================================
Enhancements:
* Go.mod dependency upgrades

========================================================================
Amazon CloudWatch Agent Operator v2.2.0 (2025-03-07)
========================================================================
Enhancements:
* Grant CloudWatchAgent ClusterRole permissions to invoke EndpointSlices API
* Go.mod dependency upgrades

========================================================================
Amazon CloudWatch Agent Operator v2.1.0 (2025-01-23)
========================================================================
Enhancements:
[ApplicationSignals] Add .NET runtime metrics config (#279)

Bug Fixes:
[ApplicationSignals] Allow X-Ray and Application Signals Port Compatibility (#280)

========================================================================
Amazon CloudWatch Agent Operator v2.0.1 (2024-12-17)
========================================================================
Bug Fixes:
* [Prometheus] Fix TA Image and Operator Version

========================================================================
Amazon CloudWatch Agent Operator v2.0.0 (2024-12-09)
========================================================================
Enhancements:
* [Prometheus] Implement Target Allocator to distribute prometheus targets among CloudWatch Agent instances
* [Prometheus] Create Prometheus and Target Allocator resources

========================================================================
Amazon CloudWatch Agent Operator v1.9.0 (2024-11-01)
========================================================================
Enhancements:
* Open a port 4311 for agent server when appsignals is enabled
* Attach service name source as resource attribute to operator
* Use replicaset name as part of service name fallback